--- a/play.html
+++ b/play.html
@@ -1,19 +1,7 @@
-<form>
-	<label> 
-		one
-		<input type="radio" name="q" value="one">
-	</label>
 
-	<label> 
-		two
-		<input type="radio" name="q" value="two">
-	</label>
-
-	<label> 
-		three
-		<input type="radio" name="q" value="three">
-	</label>
-	
-	<br>
-	<input type="submit">
+<h2> Enter some text to ROT%s <h2>
+<form method="post">
+    <textarea name="text" style="height: 100px; width: 400px;"></textarea>
+    <br>
+    <input type="submit">
 </form>
